CHANGES
*******

0.8 (unreleased)
================

- Added references to Morepath and Pyramid extensions that integrate
  BowerStatic.

- Added an example on how to integrate BowerStatic with a Flask
  application.

- Fixed documentation describing WebOb integration to new reality as of
  0.7.

0.7 (2014-11-15)
================

- The publisher and injector have been refactored into
  ``PublisherTween`` and a ``Publisher``, and an ``InjectorTween`` and
  an ``Injector``. The Tween versions are the ones intended for use by
  web frameworks that already use WebOb (such as Morepath and Pyramid)
  as an alternative to using WSGI-based integration.

  The WSGI-based integration has remained unchanged; you can still use
  ``bower.wrap`` (or ``bower.injector`` and ``bower.publisher``).

0.6 (2014-11-13)
================

- Added Python 3 compatibility. Fixes issue #25.

- Bower components and local components can be created based on a path
  relative to the directory in which the components are created using
  ``bowerstatic.module_relative_path``.

- The injector and the publisher can now also be used directly by
  providing a WebOb request and response. Third-party frameworks that
  already use WebOb (such as Morepath and Pyramid) can make use of
  this to integrate with on the level of their own request and
  response objects, instead of on the WSGI level.

0.5 (2014-09-24)
================

- On some platforms and filesystems (such as Linux ext3, Mac OS X)
  ``os.path.getmtime()`` returns timestamps with the granularity of
  seconds instead of subseconds such as Linux ext4. We go for second
  granularity now by default for autoversioning as this should be good
  enough during development.

  The test for autoversioning was assuming sub-second granularity and
  this test failed. This test is now skipped on Mac OS X. What didn't
  help was weird code in BowerStatic that cut off the last bit of the
  microsecond isoformat -- this was removed.
