@@ -13,6 +13,11 @@ CHANGES
 - Fixed documentation describing WebOb integration to new reality as of
   0.7.
 
+- Format strings can be used as renderer
+
+- Renderers will receive the resource in stead of the url. Renderers
+  can be used to render resources inline.
+
 0.7 (2014-11-15)
 ================
 
